--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Descubre Oaxaca</title>
+    <title>Mi Tarjeta</title>
 </head>
 
 <body 
@@ -24,6 +24,7 @@
 
 </body>
 </html>
+
 
 
 
