--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body 
 
 <div class="card">
-    <img src="foto.png" alt="Foto de perfil">
+    <img src="foto.jpg" alt="Foto de perfil">
     <h1>Mario Davis Aguillon Puentes</h1>
     <p>Desarrollador web en aprendizaje 🚀</p>
 
