--- a/index.html
+++ b/index.html
@@ -5,26 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Tarjeta</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
-<body 
-
-<div class="card">
-    <img src="foto.jpg" alt="Foto de perfil">
-    <h1>Mario Davis Aguillon Puentes</h1>
-    <p>Desarrollador web en aprendizaje 🚀</p>
-
-
-
-
-    <a href="http://www.facebook.com/Mario Davis Aguillon/" target="_blank">Facebook</a>
-    <a href="http://github.com/" MarioAguillon" target="_blank">GitHub</a>
-    <a href="#" target="_blank">LinkedIn</a>
-</div>
+<body>
+    <div class="card">
+        <img src="foto.jpg" alt="Foto de perfil">
+        <h1>Mario Davis Aguillon</h1>
+        <p>Desarrollador web en aprendizaje 🚀</p>
+        <div class="buttons">
+            <a href="http://www.facebook.com/Mario Davis Aguillon/" target="_blank">Facebook</a>
+            <a href="http://github.com/MarioAguillon" target="_blank">GitHub</a>
+            <a href="#" target="_blank">LinkedIn</a>
+        </div>
 
 </body>
+
 </html>
-
-
-
-
